# PR-Comfyui_Hunyuan3D-0edb1971

./: README.md  install.py  node.py  pyproject.toml
infer/: views_to_mesh.py
svrm/: predictor.py
svrm/ldm/models/: svrm.py
workflow/: hunyuan3D-workflow.json
